--- a/contrib/swarm/docker-stack.yml
+++ b/contrib/swarm/docker-stack.yml
@@ -101,7 +101,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       # use app service's hostname
-      - APP_HOST=mm_app
+      - APP_HOST=app
       # talk to the port within the overlay network
       # without (over)exposing ports
       - APP_PORT_NUMBER=80
